--- a/CabBookingApplication/angular.json
+++ b/CabBookingApplication/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -94,13 +95,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "/node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "/node_modules/jquery/dist/jquery.js",
-              "/node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           }
         }
       }
