--- a/CabBookingApplication/package.json
+++ b/CabBookingApplication/package.json
@@ -22,6 +22,8 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
     "moment": "^2.29.1",
+    "ngx-webstorage": "^8.0.0",
+    "ngx-webstorage-service": "^4.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
